# axum-course

./: Cargo.toml
src/: error.rs  fuck.html  main.rs  model.rs  utils.rs  web.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
