[package]
name = "axum-course"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

# serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# axum
axum = { version = "0.8", features = ["macros"]}
tower-http = { version = "0.6.8", features = ["fs"] }
tower-cookies = "0.11.0"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
